--- a/assets/scss/common/_variables-custom.scss
+++ b/assets/scss/common/_variables-custom.scss
@@ -17,8 +17,8 @@ $font-family-sans-serif:
     "Noto Color Emoji";
 
 $font-size-base-sm: 0.875rem;
-// $font-size-md: 1rem;
-// $font-size-xl: 1.125rem;
+$font-size-md: 1rem;
+$font-size-xl: 1.25rem;
 
 $gitbookBlue: rgba(52, 109, 219, 1);
 $royalBlue: #4169E1;
